--- a/FKW/style.css
+++ b/FKW/style.css
@@ -9,7 +9,7 @@ html {
 body {
   margin: 0;
   font-family: "Poppins", sans-serif;
-  background: #573282;
+  background: 	#000;
 }
 
 p {
@@ -72,7 +72,7 @@ header {
   height: 105vh;
   min-height: 600px;
   max-height: 800px;
-  background: linear-gradient(90deg, #000000 0%, #441c55 100%);
+  background: linear-gradient(0deg, #000 0%, #441c55 100%);
 }
 
 header .container {
@@ -153,7 +153,7 @@ display: none;
 /* Poto Section */
 
 section {
-  padding: 50px 32px;
+  padding: 30px 32px;
 }
 
 section h2 {
@@ -164,16 +164,16 @@ section h2 {
 }
 
 #poto {
-  background: linear-gradient(
-    90deg,
-    rgba(255, 255, 255, 0.9) 0%,
-    rgba(255, 255, 255, 0.4) 100%
-  );
+  background: linear-gradient(    90deg,    rgba(255, 255, 255, 0.9) 0%,    rgba(255, 255, 255, 0.4) 100%  );
   backdrop-filter: blur(10px);
   box-shadow: 0 5px 55px -15px rgba(0, 0, 0, 0.2);
   border-radius: 10px;
-  padding-top: 40px;
+  padding-top: 30px;
   margin-top: -90px;
+  -webkit-border-radius: 10px;
+  -moz-border-radius: 10px;
+  -ms-border-radius: 10px;
+  -o-border-radius: 10px;
 }
 
 #poto .pic {
@@ -188,13 +188,8 @@ section h2 {
 /* Tentang Kami */
 
 #tentang {
-  margin-top: -30px;
   padding-top: 40px;
-  background: linear-gradient(
-    90deg,
-    rgba(68,28,85,255) 0%,
-    rgba(0, 0, 0, 0.9) 100%
-  );
+  background: #441C55;
   border-radius: 10px;
   -webkit-border-radius: 10px;
   -moz-border-radius: 10px;
@@ -391,7 +386,7 @@ nav .menu-icon,
 
   #tentang {
     padding: 30px;
-    margin-top: -50px;
+    margin-top: -10px;
     padding-top: 40px;
   }
 
