--- a/FKW/style.css
+++ b/FKW/style.css
@@ -3,7 +3,7 @@
 }
 
 html {
-  scroll-behavior: smooth;
+  scroll-behavior: smooth!important;
 }
 
 body {
@@ -173,6 +173,8 @@ section h2 {
   -moz-border-radius: 10px;
   -ms-border-radius: 10px;
   -o-border-radius: 10px;
+  max-width: 820px; 
+  margin-inline: auto;
 }
 
 #poto .pic {
@@ -188,7 +190,7 @@ section h2 {
 
 #tentang {
   padding-top: 20px;
-  background: #441C55;
+  background: rgb(68, 28, 85, 0.9);
   border-radius: 10px;
   -webkit-border-radius: 10px;
   -moz-border-radius: 10px;
@@ -266,12 +268,12 @@ section h2 {
 }
 
 .slider-wrapper .slide-button#prev-slide {
-  left: -50px;
+  left: -20px;
   display: none;
 }
 
 .slider-wrapper .slide-button#next-slide {
-  right: -50px;
+  right: -20px;
 }
 
 .slider-wrapper .album-list {
@@ -366,11 +368,6 @@ footer a {
 footer .content {
   display: flex;
   justify-content: space-between;
-}
-
-footer .logo {
-  font-size: 24px;
-  font-weight: bold;
 }
 
 footer .left p {
@@ -504,8 +501,6 @@ nav .menu-icon,
     padding-top: 20px;
     padding-bottom: 20px;
     margin-top: 0px;
-
-
   }
 
   #poto .pic {
@@ -557,12 +552,35 @@ nav .menu-icon,
 
   footer .right {
     flex-direction: column;
-    gap: 10px;
+    gap: 40px;
     margin-top: 20px;
+  }
+
+  footer h3 {
+    margin-top: 0;
+  }
+  
+  footer ul {
+    list-style: none;
+    padding: 0;
+    margin-bottom: 40px;
+  }
+  
+  footer ul li {
+    margin: 8px 0;
   }
 
   footer .copyright {
     flex-direction: column;
+  }
+
+  footer .socials {
+    display: flex;
+    gap: 40px;
+  }
+  
+  footer .socials img {
+    height: 40px;
   }
 
   /* Mobile nav menu */
