--- a/FKW/style.css
+++ b/FKW/style.css
@@ -3,13 +3,13 @@
 }
 
 html {
-  scroll-behavior: smooth!important;
+  scroll-behavior: smooth;
 }
 
 body {
   margin: 0;
   font-family: "Poppins", sans-serif;
-  background: 	#000;
+  background: 	rgba(45, 19, 56, 0.902);
 }
 
 p {
@@ -72,7 +72,7 @@ header {
   height: 105vh;
   min-height: 600px;
   max-height: 800px;
-  background: linear-gradient(0deg, #000 0%, #441c55 100%);
+  background: linear-gradient(0deg, #000 0%, #4e276a 100%);
 }
 
 header .container {
@@ -110,7 +110,7 @@ header .left p {
 }
 
 .link-btn {
-  background: #743282;
+  background: #4e2a72;
   color: rgb(255, 255, 255);
   display: flex;
   align-items: center;
@@ -122,7 +122,7 @@ header .left p {
 }
 
 .link-btn:hover {
-  background: #51235a;
+  background: #57336d;
   ;
 }
 
@@ -141,7 +141,7 @@ header .left p {
 }
 
 header .right img {
-  height: 400px;
+  height: 450px;
   display: flex;
 }
 
@@ -156,7 +156,7 @@ section {
 }
 
 section h2 {
-  color: #8300b6;
+  color: #35174d;
   text-align: center;
   margin: 0;
   margin-bottom: 16px;
@@ -173,15 +173,15 @@ section h2 {
   -moz-border-radius: 10px;
   -ms-border-radius: 10px;
   -o-border-radius: 10px;
-  max-width: 820px; 
+  max-width: 900px;
   margin-inline: auto;
 }
 
 #poto .pic {
   display: flex;
-  gap: 30px;
+  gap: 24px;
   justify-content: center;
-  height: 110px;
+  height: 100px;
   filter: grayscale(100%);
   -webkit-filter: grayscale(100%);
 }
@@ -190,8 +190,6 @@ section h2 {
 
 #tentang {
   padding-top: 20px;
-  background: rgb(68, 28, 85, 0.9);
-  border-radius: 10px;
   -webkit-border-radius: 10px;
   -moz-border-radius: 10px;
   -ms-border-radius: 10px;
@@ -208,7 +206,8 @@ section h2 {
 }
 
 #tentang p {
-  color: white;
+  color: rgb(255, 255, 255);
+  text-align: center;
 }
 /* Galeri */
 
@@ -370,8 +369,8 @@ footer .content {
   justify-content: space-between;
 }
 
-footer .left p {
-  margin-top: 0;
+footer .left {
+margin-bottom: 10px;
 }
 
 footer .right {
@@ -393,6 +392,10 @@ footer ul li {
   margin: 8px 0;
 }
 
+footer a:hover {
+  color: rgb(221, 221, 221);
+}
+
 footer .copyright {
   border-top: 1px solid rgba(255, 255, 255, 0.4);
   display: flex;
@@ -403,7 +406,8 @@ footer .copyright {
 
 footer .socials {
   display: flex;
-  gap: 40px;
+  gap: 20px;
+  padding-right: 30px;
 }
 
 footer .socials img {
@@ -505,7 +509,7 @@ nav .menu-icon,
 
   #poto .pic {
     gap: 10px;
-    height: 40px;
+    height: 35px;
     width: auto;
   }
 
