--- a/FKW/style.css
+++ b/FKW/style.css
@@ -9,7 +9,7 @@ html {
 body {
   margin: 0;
   font-family: "Poppins", sans-serif;
-  background: 	rgba(45, 19, 56, 0.902);
+  background: #4e276a;
 }
 
 p {
@@ -90,14 +90,14 @@ h1 {
   font-size: 50px;
   line-height: 130%;
   margin: 0;
-  background: linear-gradient(90deg, #ffb941 0%, #ffffff 100%);
+  background: linear-gradient(90deg, #fff 0%, #ffffff 100%);
   -webkit-text-fill-color: transparent;
   -webkit-background-clip: text;
   background-clip: text;
 }
 
 header .left p {
-  background: linear-gradient(90deg, #ffffff 0%, #ffffff 100%);
+  background: linear-gradient(90deg, #fff 0%, #fff 100%);
   -webkit-text-fill-color: transparent;
   -webkit-background-clip: text;
   background-clip: text;
@@ -110,8 +110,8 @@ header .left p {
 }
 
 .link-btn {
-  background: #4e2a72;
-  color: rgb(255, 255, 255);
+  background: rgba(255, 255, 255, 0.4);
+  color: #fff;
   display: flex;
   align-items: center;
   gap: 16px;
@@ -122,14 +122,14 @@ header .left p {
 }
 
 .link-btn:hover {
-  background: #57336d;
+  background: rgba(255, 255, 255, 0.5);
   ;
 }
 
 .link-btn .btn-icon img {
   height: 36px;
   display: flex;
-  color: white;
+  color: #ffb941;
 }
 
 .link-btn .btn-text div:first-child {
@@ -163,7 +163,7 @@ section h2 {
 }
 
 #poto {
-  background: linear-gradient(    90deg,    rgba(255, 255, 255, 0.9) 0%,    rgba(255, 255, 255, 0.4) 100%  );
+  background: linear-gradient(90deg, rgba(255, 255, 255, 0.9) 0%,rgba(255, 255, 255, 0.4)) 100% ;
   backdrop-filter: blur(10px);
   box-shadow: 0 5px 55px -15px rgba(0, 0, 0, 0.2);
   border-radius: 10px;
@@ -173,13 +173,13 @@ section h2 {
   -moz-border-radius: 10px;
   -ms-border-radius: 10px;
   -o-border-radius: 10px;
-  max-width: 900px;
+  max-width: 1100px;
   margin-inline: auto;
 }
 
 #poto .pic {
   display: flex;
-  gap: 24px;
+  gap: 55px;
   justify-content: center;
   height: 100px;
   filter: grayscale(100%);
@@ -188,7 +188,12 @@ section h2 {
 
 /* Tentang Kami */
 
+#tentang- {
+  padding-top: 10px;
+}
+
 #tentang {
+  margin-inline: auto;
   padding-top: 20px;
   -webkit-border-radius: 10px;
   -moz-border-radius: 10px;
@@ -199,7 +204,7 @@ section h2 {
 #tentang h2 {
   font-size: 30px;
   margin-bottom: 30px;
-  background: linear-gradient(90deg, #fda814 0%, #ffffff 100%);
+  background: linear-gradient(90deg, #fff 0%, #fff 100%); 
   background-clip: text;
   -webkit-text-fill-color: transparent;
   -webkit-background-clip: text;
@@ -208,18 +213,22 @@ section h2 {
 #tentang p {
   color: rgb(255, 255, 255);
   text-align: center;
+  max-width: 1100px;
+  margin-inline: auto;
 }
 /* Galeri */
 
 #galeri {
     padding-top: 30px;
-    width: 100%;
+    width: 90%;
+    margin-inline: auto;
+    padding-bottom: 30px;
 }
 
 #galeri h2 {
   font-size: 30px;
-  margin-bottom: 60px;
-  background: linear-gradient(90deg, #fda814 0%, #ffffff 100%);
+  margin-bottom: 10px;
+  background: linear-gradient(90deg, #fff 0%, #fff 100%);
   background-clip: text;
   -webkit-text-fill-color: transparent;
   -webkit-background-clip: text;
@@ -233,6 +242,8 @@ section h2 {
   -webkit-text-fill-color: transparent;
   -webkit-background-clip: text;
 }
+
+/* 1 */
 
 .slider-wrapper {
   position: relative;
@@ -346,6 +357,120 @@ top: -10px;
 bottom: -10px;
 }
 
+/* 2 */
+
+.slider-wrapper2 {
+  position: relative;
+}
+
+.slider-wrapper2 .slide-button2:hover {
+  background: rgb(220, 220, 220);
+}
+
+.slider-wrapper2 .slide-button2 {
+  top: 50%;
+  position: absolute;
+  height: 40px;
+  width: 40px;
+  color: #000;
+  background: #fff;
+  font-size: 1.3rem;
+  cursor: pointer;
+  border-radius: 50%;
+  -webkit-border-radius: 50%;
+  -moz-border-radius: 50%;
+  -ms-border-radius: 50%;
+  -o-border-radius: 50%;
+  outline: none;
+  border: none;
+  border-color: white;
+  transform: translateY(-50%);
+  -webkit-transform: translateY(-50%);
+  -moz-transform: translateY(-50%);
+  -ms-transform: translateY(-50%);
+  -o-transform: translateY(-50%);
+}
+
+.slider-wrapper2 .slide-button2#prev-slide2 {
+  left: -20px;
+  display: none;
+}
+
+.slider-wrapper2 .slide-button2#next-slide2 {
+  right: -20px;
+}
+
+.slider-wrapper2 .album-list2 {
+  display: grid;
+  gap: 18px;
+  grid-template-columns: repeat(11, 1fr);
+  overflow-x: auto;
+  font-size: 0;
+  scrollbar-width: none;
+  margin-bottom: 25px;
+}
+
+.slider-wrapper2 .album-list2::-webkit-scrollbar {
+  display: none;
+}
+
+.slider-wrapper2 .album-list2 .album-item2 {
+  width: 270px;
+  height: 180px;
+  object-fit: cover;
+}
+
+.slider-scrollbar2 {
+  height: 24px;
+  width: 100%;
+  align-items: center;  
+  display: flex;
+}
+
+.slider-scrollbar2 .scrollbar-track2 {
+  height: 2px;
+  width: 100%;
+  background: #441C55;
+  position: relative;
+  border-radius: 4px;
+  -webkit-border-radius: 4px;
+  -moz-border-radius: 4px;
+  -ms-border-radius: 4px;
+  -o-border-radius: 4px;
+}
+
+.slider-scrollbar2:hover .scrollbar-track2 {
+height: 4px;
+}
+
+.slider-scrollbar2 .scrollbar-thumb2 {
+  position: absolute;
+  height: 100%;
+  width: 50%;
+  background: #fff;
+  border-radius: inherit;
+  -webkit-border-radius: inherit;
+  -moz-border-radius: inherit;
+  -ms-border-radius: inherit;
+  -o-border-radius: inherit;
+  cursor: grab;
+}
+
+.slider-scrollbar2 .scrollbar-thumb2:active {
+  cursor: grabbing;
+  height: 6px;
+  top: -1px;
+}
+
+.slider-scrollbar2 .scrollbar-thumb2::after {
+content: "";
+position: absolute;
+left: 0;
+right: 0;
+top: -10px;
+bottom: -10px;
+}
+
 #yt-video {
   margin: auto;
   height: 157px;
@@ -355,7 +480,7 @@ bottom: -10px;
 /* Footer */
 
 footer {
-  background: linear-gradient(90deg, #0a1300 0%, #001e0f 100%);
+  background: linear-gradient(90deg, #000000 0%, #000000 100%);
   color: #fff;
   padding-top: 50px;
 }
