--- a/FKW/style.css
+++ b/FKW/style.css
@@ -143,19 +143,20 @@ header .left p {
 }
 
 .link-btn {
-  background: rgba(255, 255, 255, 0.4);
   color: #fff;
   display: flex;
   align-items: center;
   gap: 16px;
   padding: 8px 16px;
   border-radius: 10px;
+  border: 3px white;
+  border-style: solid;
   font-size: 16px;
   width: 210px;
 }
 
 .link-btn:hover {
-  background: rgba(255, 255, 255, 0.5);
+  background: rgba(255, 255, 255, 0.2);
   ;
 }
 
