--- a/FKW/style.css
+++ b/FKW/style.css
@@ -1,6 +1,9 @@
 
 * {
   box-sizing: border-box;
+  -webkit-tap-highlight-color: rgba(255,255,255,0) !important;
+  -webkit-focus-ring-color: rgba(255,255,255,0) !important;
+  outline: none !important;
 }
 
 html {
@@ -1048,16 +1051,17 @@ nav .menu-icon,
 
   .mobile-nav-menu {
     position: fixed;
-    right: 32px;
+    right: 20px;
+    align-items: center;
     top: 100px;
-    background: rgba(0, 0, 0, 0.8);
+    background: rgba(255, 255, 255, 0.4);
+    backdrop-filter: blur(10px);
     display: flex;
     flex-direction: column;
     padding: 8px 16px;
     gap: 16px;
     font-size: 16px;
     border-radius: 10px;
-    box-shadow: 0 4px 40px -8px rgba(0, 0, 0, 0.2);
     opacity: 0;
     z-index: 600;
     pointer-events: none;
@@ -1320,5 +1324,6 @@ nav .menu-icon,
   .heading-bazaar{
     margin-bottom: 0px;
   }
+
 
 }
